--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html, body {
-  background: #000;
+  background: #fff;
   font-family: "Montserrat", sans-serif;
   height: 100%;
 }
@@ -10,19 +10,18 @@ img {
 
 #svg54583 {
   z-index: 10;
-  position: absolute;
+  /* box-shadow: 0px 0px 10px 0 rgba(0,0,0,0.75); */
+  border: 1px solid #eee;
+  border-radius: 10px;
+  /* position: absolute;
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
-}
-
-canvas {
-  height: 100%;
-  width: 100%;
+  bottom: 0; */
 }
 
 .nav-bottom {
+  margin-top: 3rem;
   align-content: center;
   align-items: center;
   display: flex;
@@ -40,6 +39,7 @@ canvas {
   justify-content: center;
   position: relative;
   width: 100%;
+  height: 100vh;
   @media screen and (max-width: 600px) {
     align-content: space-between;
   }
@@ -48,8 +48,8 @@ canvas {
 #visual {
   position: relative;
   font-size: 0.8em;
-  height: 100vmin;
-  width: 100vmin;
+  height: 50vh;
+  width: 50vh;
   @media screen and (max-width: 600px) {
     width: 100vmin;
   }
@@ -79,12 +79,11 @@ nav a {
   }
 }
 
-nav a:hover {
-  background-color: #000;
-  border: solid 1px gold;
-}
-
-nav a.active {
-  background-color: #000;
-  border: solid 1px gold;
+.button {
+  border: 2px solid black;
+  background: transparent;
+  padding: 0.5em 1.5em;
+  font-size: 1.2rem;
+  border-radius: 5px;
+  cursor: pointer;
 }
